# Discordbot-rs

./: Cargo.toml  example.env
src/: commands.rs  main.rs
