[package]
name = "mc-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2"
tokio = { version = "1", features = ["full"] }
mcquery = "1.1.1" # For querying Minecraft server
dotenv = "0.15"   # For managing environment variables (optional, for your token)
mcping = "0.2.0"
poise = "0.6.1"
env_logger = "0.11.5"
